# LaDDR

./: .gitignore  README.md  latent_RNA.py  pyproject.toml  requirements.txt  setup.py
examples/: Snakefile  examples.sh
examples/bash1/: coverage_manifest.tsv  run.sh
examples/bash1/gene_bins/: genes.tsv
examples/shell/: config.yaml  run.sh
examples/snakemake/: Snakefile  config.yaml  coverage_manifest.tsv
scripts/: get_gene_bins.py  inspect_model.py
src/laddr/: __init__.py  cli.py  init.py  models.py
src/laddr/resources/: config.default.yaml  config.example.yaml  config.extended.yaml  run.sh
src/latent_rna/: binning.py  cli.py  config.default.yaml  coverage.py  init.py  models.py  setup.py
src/latent_rna/resources/: Snakefile  config.default.yaml  config.example.yaml  config.extended.yaml  coverage_manifest.tsv  run.sh
test/: config.yaml
